Ajout du texte d'accueil à côté du nom

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Black transparent bg -->
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
-                <h1 class="tm-brand-name">Yanis Zemouli</h1>
+                <div style="display: flex; justify-content: center; align-items: center; gap: 10px; flex-wrap: wrap;">
+                 <h1 class="tm-brand-name" style="margin: 0;">Yanis Zemouli</h1>
+                 <span style="font-size: 1.2rem; font-weight: normal; color: #fff;">
+                  Bienvenue sur la page d'accueil de mon portfolio
+                  </span>
+                </div>
                 <p class="tm-brand-description mb-0">BTS SIO – Option SLAM | 18 ans</p>
               </div>
             </div>
